working on banner section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
 </head>
+
 <body>
-    <h1>Hello from world cup</h1>
+    <!-- header section start -->
+    <header>
+
+    </header>
+    <!-- header section end -->
+    <!-- banner start -->
+    <main>
+        <section class="container">
+            <div class="top-banner">
+                <div class="banner-info">
+                    <div class="banner-title">
+                        The Greatest show on the earth
+                    </div>
+                    <div class="banner-detail">
+                        Contrary to popular belief, Lorem Ipsum is not simply
+                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
+                        2000 years old.
+                    </div>
+                    <button class="primary-btn">
+                        Watch Live
+                    </button>
+                </div>
+                <div class="banner-thumbnail">
+                    <img src="Banner Image.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- banner end -->
 </body>
+
 </html>
