banner section done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -18,21 +19,21 @@
     <main>
         <section class="container">
             <div class="top-banner">
-                <div class="banner-info">
+                <div class="banner-info half-width">
                     <div class="banner-title">
-                        The Greatest show on the earth
+                        <h1>The Greatest show on the earth</h1>
                     </div>
                     <div class="banner-detail">
-                        Contrary to popular belief, Lorem Ipsum is not simply
-                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
-                        2000 years old.
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text. It has roots in a piece of classical Latin literature from 45 BC, making it
+                            over 2000 years old.</p>
                     </div>
                     <button class="primary-btn">
                         Watch Live
                     </button>
                 </div>
-                <div class="banner-thumbnail">
-                    <img src="Banner Image.png" alt="">
+                <div class="banner-thumbnail half-width">
+                    <img src="images/assets/Banner Image.png" alt="">
                 </div>
             </div>
         </section>
