start blog part

--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
                 </div>
             </div>
         </section>
+        <!-- banner end -->
+        <!-- blog start -->
+        <article class="container">
+
+        </article>
+        <!-- blog end -->
     </main>
-    <!-- banner end -->
+    
 </body>
 
 </html>
