blog html structure done

--- a/index.html
+++ b/index.html
@@ -39,12 +39,43 @@
         </section>
         <!-- banner end -->
         <!-- blog start -->
-        <article class="container">
-
-        </article>
+        <section class="container">
+            <aside>
+                <div class="upcoming-match">
+                    <p>Upcoming Match</p>
+                </div>
+                <div class="all-group">
+                    <p>All group</p>
+                </div>
+                <div class="blog">
+                    <p>Blogs</p>
+                </div>
+            </aside>
+            <article>
+                <div class="blog">
+                    <div class="blog-thumbnail">
+                        <img src="images/assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-detail">
+                        <p class="blog-tag">Transfer</p>
+                        <p class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <div class="blog-info">
+                            <div class="duration">
+                                <img src="images/assets/Time Icon.png" alt="">
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <img src="images/assets/Chat Icon.png" alt="">
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
         <!-- blog end -->
     </main>
-    
+
 </body>
 
 </html>
