blog section done

--- a/index.html
+++ b/index.html
@@ -40,38 +40,192 @@
         <!-- banner end -->
         <!-- blog start -->
         <section class="container">
-            <aside>
-                <div class="upcoming-match">
-                    <p>Upcoming Match</p>
-                </div>
-                <div class="all-group">
-                    <p>All group</p>
-                </div>
-                <div class="blog">
-                    <p>Blogs</p>
-                </div>
-            </aside>
-            <article>
-                <div class="blog">
-                    <div class="blog-thumbnail">
-                        <img src="images/assets/Blog Image.png" alt="">
+            <div class="blogs">
+                <aside>
+                    <div class="upcoming-match">
+                        <button>Upcoming Match</button>
                     </div>
-                    <div class="blog-detail">
-                        <p class="blog-tag">Transfer</p>
-                        <p class="blog-title">Transfer Live: Chlesea  in talks over Kimpenbe transfer</p>
-                        <div class="blog-info">
-                            <div class="duration">
-                                <img src="images/assets/Time Icon.png" alt="">
-                                <p>10h</p>
-                            </div>
-                            <div class="chat">
-                                <img src="images/assets/Chat Icon.png" alt="">
-                                <p>23</p>
+                    <div class="all-group">
+                        <button>All group</button>
+                    </div>
+                    <div class="blog">
+                        <button>Blogs</button>
+                    </div>
+                </aside>
+                <article class="all-blogs">
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </article>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-blog">
+                        <div class="blog-thumbnail">
+                            <img src="images/assets/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <button>Transfer</button>
+                            <p class="title">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <div class="blog-info">
+                                <div class="duration">
+                                    <img src="images/assets/Time Icon.png" alt="">
+                                    <p>10h</p>
+                                </div>
+                                <div class="chat">
+                                    <img src="images/assets/Chat Icon.png" alt="">
+                                    <p>23</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
         </section>
         <!-- blog end -->
     </main>
