--- a/index.html
+++ b/index.html
@@ -229,7 +229,20 @@
         </section>
         <!-- blog end -->
     </main>
-
+    <!-- footer start -->
+    <footer>
+        <h1 class="footer-title">Goal</h1>
+        <hr>
+        <div class="footer-items">
+            <span>Contact Us</span>
+            <span>Terms of Service</span>
+            <span>Privacy Policy</span>
+            <span>Privacy Settings</span>
+            <span>Goal App</span>
+            <span>Goal Live</span>
+        </div>
+    </footer>
+    <!-- footer end -->
 </body>
 
 </html>
