--- a/website-2.html
+++ b/website-2.html
@@ -40,7 +40,7 @@
         <!-- banner end -->
         <!-- blog start -->
         <section class="container">
-            <div class="blogs">
+            <div class="matches">
                 <aside>
                     <div class="upcoming-match">
                         <button>Upcoming Match</button>
@@ -52,7 +52,63 @@
                         <button>Blogs</button>
                     </div>
                 </aside>
-                <article class="all-blogs">
+                <div class="all-matches">
+                    <div class="match">
+                        <div class="flags">
+                            <img src="images/assets/Flag.png" alt="">
+                            <span>vs</span>
+                            <img src="images/assets/germany Flag.png" alt="">
+                        </div>
+                        <p>Germany vs France</p>
+                        <small>April 01 2023, 1.00AM</small>
+                    </div>
+                    <div class="match">
+                        <div class="flags">
+                            <img src="images/assets/Flag.png" alt="">
+                            <span>vs</span>
+                            <img src="images/assets/germany Flag.png" alt="">
+                        </div>
+                        <p>Germany vs France</p>
+                        <small>April 01 2023, 1.00AM</small>
+                    </div>
+                    <div class="match">
+                        <div class="flags">
+                            <img src="images/assets/Flag.png" alt="">
+                            <span>vs</span>
+                            <img src="images/assets/germany Flag.png" alt="">
+                        </div>
+                        <p>Germany vs France</p>
+                        <small>April 01 2023, 1.00AM</small>
+                    </div>
+                    <div class="match">
+                        <div class="flags">
+                            <img src="images/assets/Flag.png" alt="">
+                            <span>vs</span>
+                            <img src="images/assets/germany Flag.png" alt="">
+                        </div>
+                        <p>Germany vs France</p>
+                        <small>April 01 2023, 1.00AM</small>
+                    </div>
+                    <div class="match">
+                        <div class="flags">
+                            <img src="images/assets/Flag.png" alt="">
+                            <span>vs</span>
+                            <img src="images/assets/germany Flag.png" alt="">
+                        </div>
+                        <p>Germany vs France</p>
+                        <small>April 01 2023, 1.00AM</small>
+                    </div>
+                    <div class="match">
+                        <div class="flags">
+                            <img src="images/assets/Flag.png" alt="">
+                            <span>vs</span>
+                            <img src="images/assets/germany Flag.png" alt="">
+                        </div>
+                        <p>Germany vs France</p>
+                        <small>April 01 2023, 1.00AM</small>
+                    </div>
+                </div>
+                <!-- <article class="all-blogs">
                     <div class="single-blog">
                         <div class="blog-thumbnail">
                             <img src="images/assets/Blog Image.png" alt="">
@@ -224,7 +280,7 @@
                             </div>
                         </div>
                     </div>
-                </article>
+                </article> -->
             </div>
         </section>
         <!-- blog end -->
