--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="blogs">
                 <aside>
                     <div class="upcoming-match">
-                        <button>Upcoming Match</button>
+                        <button><a href="website-2.html" target="_blank">Upcoming Match</a></button>
                     </div>
                     <div class="all-group">
                         <button>All group</button>
