--- a/website-2.html
+++ b/website-2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Cup</title>
+    <title>Live Match</title>
     <link rel="stylesheet" href="styles/website-2.css">
 </head>
 
